--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/banner1.jpeg" class="d-block w-100" alt="Banner 1" />
+      <img src="banner1.jpeg" class="d-block w-100" alt="Banner 1" />
     </div>
     <div class="carousel-item">
-      <img src="images/banner2.jpeg" class="d-block w-100" alt="Banner 2" />
+      <img src="banner2.jpeg" class="d-block w-100" alt="Banner 2" />
     </div>
   </div>
   <button class="carousel-control-prev" data-bs-target="#heroCarousel" data-bs-slide="prev">
@@ -112,3 +112,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
